fix: neoforge 1.21.1 startup, dynamic args and user data protection
- Fix NeoForge startup by correctly separating Module-Path (-p) and Class-Path (-cp).
  Only boot-level modules (Bootstrap, SecureJarHandler, ASM, JarJar) are now
  placed in the module path to prevent Manifest version parsing errors in FML.
- Implement dynamic resolution of NeoForge boot modules by filtering the resolved
  classpath instead of relying on a hardcoded library list.
- Protect player settings and mod data (Xaero, VoxelMap, JEI, options.txt)
  from being overwritten by the integrity checker if they already exist.
- Prevent redundant extraction of 'extra.zip' by implementing a hash-based
  marker file (.extra_unpacked_hash) for environments where the backend
  does not provide a checksum.
- Add dynamic merging of NeoForge FML arguments (neoForgeVersion, fmlVersion, etc.)
  from the backend with safe defaults to prevent MissingRequiredOptionsException.
- Re-enable system properties for custom Authlib and launcher branding.
- Add Java 21 Vector API optimization (--add-modules jdk.incubator.vector)
  for improved search performance in mods.
- Decouple download URLs from hardcoded constants by using AppConfig.BASE_URL.
- Filter redundant Minecraft client jars and legacy srgutils from the classpath
  to avoid module name conflicts.